--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "axios": "^0.19.2",
     "cors": "^2.8.5",
     "date-fns": "^2.9.0",
+    "dotenv": "^8.2.0",
     "history": "^4.10.1",
     "immer": "^5.3.6",
     "polished": "^3.4.4",
