--- a/.env
+++ b/.env
@@ -1,15 +1,9 @@
-APP_URL=http://localhost:3333
+APP_URL=http://159.89.181.231:3333
 NODE_ENV=development
 
 #Auth
 
 APP_SECRET=senhassobral
-
-#Database
-DB_HOST=localhost
-DB_USER=postgres
-DB_PASS=docker
-DB_NAME=senhas
 
 #Mongo
 
