--- a/package.json
+++ b/package.json
@@ -14,14 +14,19 @@
     "history": "^4.10.1",
     "immer": "^5.3.6",
     "polished": "^3.4.4",
+    "print": "^1.1.0",
     "prop-types": "^15.7.2",
-    "react": "^16.12.0",
+    "react": "^16.13.0",
     "react-dom": "^16.12.0",
     "react-icons": "^3.9.0",
     "react-perfect-scrollbar": "^1.5.8",
+    "react-print": "^1.3.1",
     "react-redux": "^7.1.3",
     "react-router-dom": "^5.1.2",
     "react-scripts": "3.3.1",
+    "react-sound": "^1.2.0",
+    "react-speech-kit": "^2.0.3",
+    "react-to-print": "^2.6.2",
     "react-toastify": "^5.5.0",
     "reactotron-react-js": "^3.3.7",
     "reactotron-redux": "^3.1.2",
