deploy final version

--- a/.env
+++ b/.env
@@ -1,5 +1,5 @@
-APP=
-NODE_ENV=development
+APP_URL=http://159.89.181.231
+NODE_ENV=production
 
 #Auth
 
@@ -7,5 +7,5 @@ APP_SECRET=senhassobral
 
 #Mongo
 
-MONGO_URL=mongodb://localhost:27017/senhas
+MONGO_URL=mongodb://159.89.181.231:27017/senhas
 
